force-app/main/default/objects/Capacity_Week__c/Capacity_Week__c.object-meta.xml
<CustomObject>
    <label>Capacity Week</label>
    <nameField>
        <displayFormat>CW-{000}</displayFormat>
        <label>Capacity Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>