force-app/main/default/objects/Capacity_Week__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <formula>Week_Start_Date__c  + 6</formula>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>