force-app/main/default/objects/Capacity_Week__c/fields/Week_Ends_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Ends_Date__c</fullName>
    <label>Week Ends Date</label>
    <type>Date</type>
</CustomField>